Finished laying out UI

--- a/index.html
+++ b/index.html
@@ -8,7 +8,19 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body class="unexploded">
-  
+  <main>
+      <div><p>0:00:30</p></div>
+      <div>
+        <img src="img/uncut-blue-wire.png">
+        <img src="img/uncut-green-wire.png">
+        <img src="img/uncut-red-wire.png">
+        <img src="img/uncut-yellow-wire.png">
+        <img src="img/uncut-white-wire.png">
+      </div>
+      <div>
+        <button>RESET</button>
+      </div>
+  </main>
   <script src="js/bomb.js"></script>
 </body>
 </html>
