--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 <body class="unexploded">
   <main>
       <div><p>0:00:30</p></div>
-      <div>
-        <img src="img/uncut-blue-wire.png">
-        <img src="img/uncut-green-wire.png">
-        <img src="img/uncut-red-wire.png">
-        <img src="img/uncut-yellow-wire.png">
-        <img src="img/uncut-white-wire.png">
+      <div id="wirebox">
+        <img id="blue" src="img/uncut-blue-wire.png">
+        <img id="green" src="img/uncut-green-wire.png">
+        <img id="red" src="img/uncut-red-wire.png">
+        <img id="yellow" src="img/uncut-yellow-wire.png">
+        <img id="white" src="img/uncut-white-wire.png">
       </div>
       <div>
         <button>RESET</button>
